﻿0.11.0 [2009-12-09]
* Updated to build correctly with new core & ui.
* Requires ini file of a particular version; if it is not found, any existing
one will be renamed, and a new one copied into place.
* Changed the hotkeys to Command-Fx (or Control-Fx for non-Mac users).
* changed the ini filoe to start with index 01.  This is useful for sorting.
* Changed the exit circle (exit pupil) to be calculated.  This reuires the
addition og the telescope diameter to the ini file.
* Add a local StelDialog clone to overcome a stupid Windows issue.

0.10.0 [2009-09-13]
Updated to build with new core (new plugin info method)
Move icons into QT resource
Move module.ini into resource called default_ocular.ini / ocular.ini (when file)

0.1.0 [2009-02-17]
Created plugin
