@@ -3,6 +3,8 @@
   <qresource prefix="ocular" >
     <file>bt_ocular_on.png</file>
     <file>bt_ocular_off.png</file>
+    <file>normalStyle.css</file>
+    <file>nightStyle.css</file>
     <file>default_ocular.ini</file>
   </qresource>
 </RCC>
