@@ -1,3 +1,5 @@
+Added custom stylesheets.
+
 ﻿0.11.0 [2009-12-09]
 * Updated to build correctly with new core & ui.
 * Requires ini file of a particular version; if it is not found, any existing
